syntax = "proto3";

package logz;

import "proto/time.proto";
import "third_party/google/protobuf/any.proto";

option go_package = "github.com/explodes/serving/logz";

enum Level {
  UNKNOWN = 0;
  DEBUG = 1;
  INFO = 2;
  WARN = 3;
  ERROR = 4;
}

message Entry {
  // When the entry occurred.
  .serving.Timestamp timestamp = 1;

  // Optional time when the entry ended.
  .serving.Timestamp end_timestamp = 2;

  // Level of the log.
  Level level = 3;

  // Log message.
  string message = 4;

  // Any additional information to record.
  .google.protobuf.Any ext = 5;
}

message Frame {
  // ID of and end-to-end series of RPCs.
  string stack_id = 1;

  // ID of an individual RPC.
  string frame_id = 2;

  // Name of an individual RPC.
  string frame_name = 3;

  // Parent operation ID of an individual RPC.
  string parent_frame_id = 4;
}